--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -46,31 +46,23 @@
     <img src="img/codepoursuite/prem_img.png" width="375" height="812">
 </div>
 <div class="rect-marine"></div>
-<div class="haut-image2">
-    <img src="img/codepoursuite/table.jpg" width="335" height="223">
-</div>
-<div class="leg1">
-    <p>Image de Benjamin et Savannah, Google Image</p>
-</div>
 
-<div class="titre_ben">
-    <p>Benjamin le hacker</p>
-</div>
-<div class="sous-titre1">
+<div class="partie1">
+    <div class="haut-image2">
+        <img src="img/codepoursuite/table.jpg" width="335" height="223">
+        <p>Image de Benjamin et Savannah, Google Image</p>
+    </div>
+
+    <h1>Benjamin le hacker</h1>
     <p>Orphelin de 13 ans au Danemark, il recherche sa mère qu’il pensait décéder
         lors d’un accident de la route. Il n’était jusque-là pas une menace. Mais
         heureusement que la technologie existe.
     </p>
-</div>
-<div class="inter-titre1">
-    <p>Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
-        la recherche de sa mère
-    </p>
-</div>
-
-
-<div class="texte1">
-    <p>
+    <h2>Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
+    la recherche de sa mère
+    </h2>
+        <div class="texte1">
+        <p>
         Internet fait partie de ton quotidien, que ce soit pour faire des
         recherches ou bien jouer à des jeux. Comme pour Benjamin, le héros du film
         « Code Poursuite ». On remarque que dans ce film, Benjamin se sert
@@ -78,17 +70,17 @@
         est très fort pour hacker les ordinateurs, il a par exemple utilisé ses
         compétences informatiques afin de changer ses résultats scolaires lors d’un
         test, pour lui et pour ses camarades de classe.
-    </p>
-</div>
-<div class="img3">
-    <img src="img/codepoursuite/ben.png" width="375" height="270">
-</div>
-<div class="leg2">
-    <p>Benjamin qui utilise son ordinateur, Google Image</p>
+        </p>
+        </div>
 </div>
 
-<div class="texte2">
-    <p>Il ne s’est pas seulement contenté de changeait ses notes, il a également
+<div class="partie2">
+    <div class="img3">
+        <img src="img/codepoursuite/ben.png" width="375" height="270">
+        <p>Benjamin qui utilise son ordinateur, Google Image</p>
+    </div>
+    <div class="texte2">
+        <p>Il ne s’est pas seulement contenté de changeait ses notes, il a également
         hacker les services secrets danois afin de télécharger beaucoup de dossiers
         confidentiels. Ses dossiers contenaient des informations importantes sur sa
         mère qu’il pensait décédé, jusqu’à ce les services policiers danois lui
@@ -98,24 +90,17 @@
         Anna la mère de Benjamin. Malgré cela, Benjamin et son amie Savannah, ont
         fui les services secrets. Ils n'ont pas hésiter à jeter leurs portables
         afin que personnes ne puissent les traquer.
-    </p>
-</div>
-<div class="img4">
-    <img src="img/codepoursuite/codage.jpg" width="375" height="270">
-</div>
-<div class="leg3">
-    <p>Benjamin pirate l’ordinateur de sa professeur, Capture d'écran du film Code Poursuite</p>
+        </p>
+    </div>
 </div>
 
-
-<div class="inter-titre2">
-    <p>
-        Cependant, Benjamin pollue sans le savoir
-    </p>
-</div>
-<div class="texte3">
-    <p>
-        Le personnage principal pollue avec le numérique tout le long du film. On
+<div class="partie3">
+    <div class="img4">
+     <img src="img/codepoursuite/codage.jpg" width="375" height="270">
+     <p>Benjamin pirate l’ordinateur de sa professeur, Capture d'écran du film Code Poursuite</p>
+    </div>
+    <h2>Cependant, Benjamin pollue sans le savoir</h2>
+    <p>Le personnage principal pollue avec le numérique tout le long du film. On
         peut voir qu’il laisse constamment ses appareils connectés et branchés et
         qu’il ne les éteint jamais. Il les laisse allumé ou en veille. Benjamin
         possède plusieurs exemplaires d’appareils (plus de deux ordinateurs,
@@ -130,93 +115,76 @@
         appareils électriques qui sont en bon états.
     </p>
 </div>
-<div class="img5">
-    <img src="img/codepoursuite/telephones.jpg" width="375" height="270">
-</div>
-<div class="leg4">
-    <p>
-        Benjamin jette son téléphone ainsi que celui de son amie alors qu’ils sont fonctionnels,
-    </p>
-</div>
-<div class="leg4_2">
-    <p>
-        Capture d'écran du film Code Poursuite
-    </p>
-</div>
 
-<div class="texte4">
-    <p>
-        Mais comme on peut le voir, ce n’est pas le seul à polluer, les services
+<div class="partie4">
+    <div class="img5">
+        <img src="img/codepoursuite/telephones.jpg" width="375" height="270">
+    </div>
+    <div class="leg4">Benjamin jette son téléphone ainsi que celui de son amie alors qu’ils sont fonctionnels,</div>
+    <div class="leg4_2">Capture d'écran du film Code Poursuite</div>
+    <p>Mais comme on peut le voir, ce n’est pas le seul à polluer, les services
         secrets ainsi que sa mère polluent également. Ils gardent énormément de
         dossiers sur leurs appareils, téléchargent des codes pour leur plan final
         qui consiste à changer les pensées des gens. De plus, ils possèdent des
         machines qui utilisent pour tester chaque code jusqu’à trouver le bon qui
         leur permettraient d’obtenir leur résultat voulu.
     </p>
-</div>
-<div class="img6">
-    <img src="img/codepoursuite/integration.png" width="375" height="270">
-</div>
-<div class="leg5">
-    <p>
-        Algorithme écrit sur un ordinateur, Pintesrest
-    </p>
+    <div class="img6">
+        <img src="img/codepoursuite/integration.png" width="375" height="270">
+        <p>Algorithme écrit sur un ordinateur, Pintesrest</p>
+    </div>
 </div>
 
 <div class="bande_annonce">
-    <p>
-        Bande annonce de Code Poursuite:
-    </p>
-</div>
-<div class="video">
-    <iframe width="375" height="211" src="https://www.youtube.com/embed/D1sDT-KYgYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3>Bande annonce de Code Poursuite:</h3>
+    <div class="video">
+        <iframe width="375" height="211" src="https://www.youtube.com/embed/D1sDT-KYgYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </div>
 
 <div class="galerie">
-    <p>
-        Galerie
-    </p>
+    <h3>Galerie:</h3>
+    <div class="back_galerie"></div>
+    <main>
+        <section class="carousel">
+            <ul class="carousel-items">
+                <li class="imag_1">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=234164.html"><img src="img/films/imag_1.jpg" height="356" width="267">
+                    <p>The Circle</p></a>
+                </li>
+                <li class="imag_2">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=229831.html"><img src="img/films/imag_2.jpg" height="357" width="267">
+                    <p>Ready Player One</p></a>
+                </li>
+                <li class="imag_3">
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=235120.html"><img src="img/films/imag_3.jpg" height="357" width="267">
+                    <p>Nerve</p></a>
+                </li>
+                <li class="imag_4">
+                    <a href="https://www.allocine.fr/video/player_gen_cmedia=19552491&cserie=17966.html"><img src="img/films/imag_4.jpg" height="350" width="265" >
+                    <p>Mr. Robot</p></a>
+                </li>
+                <li class="imag_5">
+                    <a href="https://www.allocine.fr/video/player_gen_cmedia=19584038&cserie=24940.html"><img src="img/films/imag_5.jpg" height="350" width="263">
+                    <p>How to sell drugs online</p></a>
+                </li>
+                <li class="imag_6">
+                    <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=10855.html"><img src="img/films/imag_6.jpg" height="350" width="263">
+                    <p>Black Mirror</p></a>
+                </li>
+                <li class="imag_7">
+                    <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=26491.html"><img src="img/films/imag_7.jpg" height="350" width="263">
+                    <p>Control Z</p></a>
+                </li>
+            </ul>
+        </section>
+    </main>
 </div>
-<div class="back_galerie"></div>
-
-<main>
-    <section class="carousel">
-        <ul class="carousel-items">
-            <li class="imag_1">
-                <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=234164.html"><img src="img/films/imag_1.jpg" height="356" width="267">
-                <p>The Circle</p></a>
-            </li>
-            <li class="imag_2">
-                <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=229831.html"><img src="img/films/imag_2.jpg" height="357" width="267">
-                <p>Ready Player One</p></a>
-            </li>
-            <li class="imag_3">
-                <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=235120.html"><img src="img/films/imag_3.jpg" height="357" width="267">
-                <p>Nerve</p></a>
-            </li>
-            <li class="imag_4">
-                <a href="https://www.allocine.fr/video/player_gen_cmedia=19552491&cserie=17966.html"><img src="img/films/imag_4.jpg" height="350" width="265" >
-                <p>Mr. Robot</p></a>
-            </li>
-            <li class="imag_5">
-                <a href="https://www.allocine.fr/video/player_gen_cmedia=19584038&cserie=24940.html"><img src="img/films/imag_5.jpg" height="350" width="263">
-                <p>How to sell drugs online</p></a>
-            </li>
-            <li class="imag_6">
-                <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=10855.html"><img src="img/films/imag_6.jpg" height="350" width="263">
-                <p>Black Mirror</p></a>
-            </li>
-            <li class="imag_7">
-                <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=26491.html"><img src="img/films/imag_7.jpg" height="350" width="263">
-                <p>Control Z</p></a>
-            </li>
-        </ul>
-    </section>
-</main>
 
 <div class="bouton">
-    <a href="Pollution.html"><img src="img/codepoursuite/bouton.png" height="72" width="296"></a>
+    <a href="Pollution.html"></a>
 </div>
+
 <div class="tex-clic">
     <a href="Pollution.html"><p>
         Pollution numérique
