--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -181,19 +181,9 @@
     </main>
 </div>
 
-<div class="bouton">
-    <a href="Pollution.html"></a>
-</div>
-
-<div class="tex-clic">
-    <a href="Pollution.html"><p>
-        Pollution numérique
-    </p></a>
-</div>
-<div class="tex-clic2">
-    <a href="Pollution.html"><p>
-        Article suivant
-    </p></a>
+<div class="bouton"><a href="Pollution.html"></a>
+    <div class="tex-clic"><a href="Pollution.html"><p>Pollution numérique</p></a></div>
+    <div class="tex-clic2"><a href="Pollution.html"><p>Article suivant</p></a></div>
 </div>
 
 <footer>
