--- a/Solutions.html
+++ b/Solutions.html
@@ -41,129 +41,71 @@
     </div>
 </header>
 
-<div class="rect-bleu"></div>
-<div class="img-ter">
-    <img src="img/Solutions/terre.jpg" height="240" width="240">
-</div>
-<div class="iglo">
-    <img src="img/Solutions/recycle.png" height="78" width="78">
+<div class="haut-imgs">
+    <div class="rect-bleu"></div>
+    <div class="img-ter"><img src="img/Solutions/terre.jpg" height="240" width="240"></div>
+    <div class="iglo"><img src="img/Solutions/recycle.png" height="78" width="78"></div>
 </div>
 
-<div class="tit-art">
-    <p>
-        Moins polluer autrement
-    </p>
-</div>
-<div class="sous-titre3_1">
-    <p>
-        Nous pouvons réduire notre empreinte de carbone en seulement quelques gestes simples.
-    </p>
-</div>
-<div class="inter-titre2_3">
-    <p>
-        Des solutions sont à envisagés !
-    </p>
-</div>
-<div class="parg1">
-    <p>
-        Proposons à Benjamin et son entourage plusieurs solutions afin qu'ils ne
+
+<div class="par1">
+    <h1>Moins polluer autrement</h1>
+    <div class="sous-titre3_1">Nous pouvons réduire notre empreinte de carbone en seulement quelques gestes simples.</div>
+    <h2>Des solutions sont à envisagés !</h2>
+    <div class="parg1">Proposons à Benjamin et son entourage plusieurs solutions afin qu'ils ne
         polluent moins. Ils peuvent commencer par débrancher leurs appareils
         lorsqu’ils non plus besoins d’être chargé, éteindre les appareils qui ne
         leur servent pas (la nuit surtout), c’est consommer dans le vide. Pour
         Benjamin, il est primordial qu’il n’achète pas en plusieurs exemplaires ses
-        équipements numériques.
-    </p>
-</div>
-<div class="parg2">
-    <p>
-        En même temps, ce serait une bonne initiative de fermer les onglets
-        d’internet qu'il n'utilise plus.
-    </p>
-</div>
-<div class="parg3">
-    <p>
-        Lorsqu’il quitte son domicile, il faudrait qu’il pense à éteindre sa box
+        équipements numériques.</div>
+    <div class="parg2">En même temps, ce serait une bonne initiative de fermer les onglets
+        d’internet qu'il n'utilise plus.</div>
+    <div class="parg3">Lorsqu’il quitte son domicile, il faudrait qu’il pense à éteindre sa box
         internet au lieu de la laisser en marche 24h/24. Alors que Benjamin achète
         en plusieurs exemplaires ses appareils, ils les jettent, ce qu’il ne
         faudrait pas faire surtout si ces appareils sont encore fonctionnels.
         Enfin, pour lui et son entourage, ils doivent arrêter de télécharger des
         dossiers qui vont rester sur leurs ordinateurs et dont ils n’ont pas
         besoins. Par la suite, ils devraient trier leurs dossiers sur leurs
-        machines, les supprimer si nécessaires.
-    </p>
-</div>
-<div class="mac">
-    <img src="img/Solutions/affichage.png" height="228" width="375">
-</div>
-<div class="lgd1">
-    <p>
-        Exemples de dossiers télécharger sur un ordinateur, Google Image
-    </p>
+        machines, les supprimer si nécessaires.</div>
 </div>
 
-<div class="parg4">
-    <p>
-        Peut-être que Benjamin ne connaissez pas l'importance de la pollution
+<div class="par2">
+    <div class="mac"><img src="img/Solutions/affichage.png" height="228" width="375"></div>
+    <div class="lgd1">Exemples de dossiers télécharger sur un ordinateur, Google Image</div>
+    <div class="parg4">Peut-être que Benjamin ne connaissez pas l'importance de la pollution
         numérique. En France, c’est 40% des français qui affirment y être
-        sensibilisé, en 2019, mais elle reste encore floue pour certains.
-    </p>
-</div>
-<div class="quest">
-    <img src="img/Solutions/quest.png" height="812" width="375">
-</div>
-<div class="lgd2">
-    <p>
-        Exemples de dossiers télécharger sur un ordinateur, Google Image
-    </p>
+        sensibilisé, en 2019, mais elle reste encore floue pour certains.</div>
 </div>
 
-<div class="inter-titre3_3">
-    <p>
-        Il existe encore des solutions qui pourrait t'aider
-    </p>
-</div>
-<div class="petit-titr">
-    <p>
-        Tu commencer par faire ce qui va être énoncer prochainement:
-    </p>
-</div>
-<div class="list">
-    <ul>
-        <li>Acheter ses matériaux reconditionner, en cas de panne, il vaut mieux faire réparer ses appareils que d'en acheter
-            des nouveaux.
-        </li>
-        <li>
-            Recycle les appareils qui restent chez toi. D'après l'ADEME, il y aurait 54 à 113 millions de smartphones qui sont
+<div class="par3">
+    <div class="quest"><img src="img/Solutions/quest.png" height="812" width="375"></div>
+    <div class="lgd2">Exemples de dossiers télécharger sur un ordinateur, Google Image</div>
+    <h2>Il existe encore des solutions qui pourrait t'aider</h2>
+    <div class="petit-titr">Tu commencer par faire ce qui va être énoncer prochainement:</div>
+    <div class="list">
+        <ul>
+            <li>Acheter ses matériaux reconditionner, en cas de panne, il vaut mieux faire réparer ses appareils que d'en acheter
+            des nouveaux.</li>
+            <li>Recycle les appareils qui restent chez toi. D'après l'ADEME, il y aurait 54 à 113 millions de smartphones qui sont
             stockés dans les placards. Tous ces appareils sont consistés de nombreux
-            matériaux qui pourrez être utilisés à la fabrication d'autres appareils.
-        </li>
-        <li>
-            Trier, garder que le nécessaire de ses e-mails
-        </li>
-        <li>
-            Désactivez les fonctions Wifi, Bluetooth…,
-        </li>
-    </ul>
-</div>
-<div class="anciens-tels">
-    <img src="img/Solutions/anciens-tels.jpg" height="281" width="375">
-</div>
-<div class="lgd3">
-    <p>
-        Les téléphones qui restent dans tes tiroirs, Google Image
-    </p>
+            matériaux qui pourrez être utilisés à la fabrication d'autres appareils.</li>
+            <li>Trier, garder que le nécessaire de ses e-mails</li>
+            <li>Désactivez les fonctions Wifi, Bluetooth…,</li>
+        </ul>
+    </div>
 </div>
 
-<div class="list2">
-    <ul>
-        <li>
-            Limite le nombre d'applications et de logiciels sur tes appareils.
-        </li>
-    </ul>
-</div>
-<div class="parg5">
-    <p>
-        Surtout, que comme la plupart des personnes, on télécharge des applications
+<div class="par4">
+    <div class="anciens-tels"><img src="img/Solutions/anciens-tels.jpg" height="281" width="375">
+    <p>Les téléphones qui restent dans tes tiroirs, Google Image</p></div>
+
+    <div class="list2">
+        <ul>
+            <li>Limite le nombre d'applications et de logiciels sur tes appareils.</li>
+        </ul>
+    </div>
+    <p>Surtout, que comme la plupart des personnes, on télécharge des applications
         "au cas où" mais ce n'est pas ce qu'il faut faire. Il existe des sites qui
         veillent à la réduction de la pollution numérique comme Clickclean, qui
         évalue la consommation énergétique des applications et des sites utilisés
@@ -171,56 +113,29 @@
         polluantes. De plus, il y a Cleanfox, qui participe à la réduction de la
         pollution numérique. Ce site consiste à supprimer et de se désabonner de
         mails non utile à l'utilisateur, ce qui permet de réduire son empreinte de
-        carbone.
-    </p>
+        carbone.</p>
 </div>
 
-<div class="firefox">
-    <img src="img/Solutions/firefox.png" height="329" width="375">
-</div>
-<div class="lgd4">
-    <p>
-        Site Web Cleanfox, Google Image
-    </p>
-</div>
-
-<div class="list3">
-    <ul>
-        <li>
-            Privilégie des moteurs de recherches qui sont engagées.
-        </li>
-    </ul>
-</div>
-<div class="parg6">
-    <p>
-        Il y a écosia, qui reverse 80% de ses bénéfices afin de planter des arbres,
+<div class="par5">
+    <div class="firefox"><img src="img/Solutions/firefox.png" height="329" width="375"></div>
+    <div class="lgd4">Site Web Cleanfox, Google Image</div>
+    <div class="list3">
+        <ul>
+            <li>Privilégie des moteurs de recherches qui sont engagées.</li>
+        </ul>
+    </div>
+    <p>Il y a écosia, qui reverse 80% de ses bénéfices afin de planter des arbres,
         pour lutter contre la déforestation. Lilo, un moteur de recherche solidaire
         qui finance gratuitement les projets que tu as choisis, il en existe encore
-        d'autres.
-    </p>
-</div>
-<div class="ecosia">
-    <img src="img/Solutions/ecosia.png" height="324" width="375">
-</div>
-<div class="lgd5">
-    <p>
-        Moteur de recherche écosia, Google Image
-    </p>
+        d'autres.</p>
+    <div class="ecosia"><img src="img/Solutions/ecosia.png" height="324" width="375"></div>
+    <div class="lgd5">Moteur de recherche écosia, Google Image</div>
 </div>
 
 
-<div class="bouton">
-    <a href="article-scientifique.html"><img src="img/pollution/bouton2.png" height="72" width="296"></a>
-</div>
-<div class="tex-clic-s1">
-    <a href="article-scientifique.html"><p>
-        Article scientifique
-    </p></a>
-</div>
-<div class="tex-clic-s2">
-    <a href="article-scientifique.html"><p>
-        Article suivant
-    </p></a>
+<div class="bn"><a href="article-scientifique.html"></a>
+    <div class="tex-clic-s1"><a href="article-scientifique.html"><p>Article scientifique</p></a></div>
+    <div class="tex-clic-s2"><a href="article-scientifique.html"><p>Article suivant</p></a></div>
 </div>
 
 <footer>
